# triage-app

./: .replit  README.md  SyntheticTriagePreprocessing.ipynb  TriageDataGeneration.ipynb  TriageModelling.ipynb  app.py  model_interface.py  pyproject.toml  replit.md  replit.nix  requirements.txt  triage_model (1).pkl  triage_model.pkl  triage_model_(5).pkl  utils.py
components/: input_forms.py  result_display.py
