[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.2",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "shap==0.49.1",
    "scikit-learn==1.7.2",
    "matplotlib==3.10.7",
    "streamlit>=1.49.1",
]
